<resources>
    <string name="app_name">Apps Activity</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="appName">App Name</string>
    <string name="devName">Developer Name</string>
    <string name="releaseDate">Release Date</string>
    <string name="price">Price</string>
    <string name="category">Category</string>
    <string name="title_activity_preview">Preview Activity</string>
    <string name="show_favorites">Show Favorites</string>
    <string name="show_all">Show All</string>
</resources>
